assets docs replaced and links updated

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <title>Hakan Demiral - Web Developer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://hakandemiral.com.tr/img/hakan_demiral.JPG" alt="Hakan Demiral Profile Photo">
+            <img src="https://hakandemiral.com.tr/assets/img/hakan_demiral.JPG" alt="Hakan Demiral Profile Photo">
             <h1>Hakan Demiral</h1>
             <h2>A man burning with a love of learning</h2>
             <div class="social">
@@ -55,6 +55,6 @@
             <i class="fas fa-map-marker-alt"></i> Ankara/Turkey
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="assets/app.js"></script>
 </body>
 </html>
